--- a/ExpenseTracker/pom.xml
+++ b/ExpenseTracker/pom.xml
@@ -41,6 +41,10 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 			<version>2.7.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
