--- a/ExpenseTracker/pom.xml
+++ b/ExpenseTracker/pom.xml
@@ -37,6 +37,10 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 			<version>2.7.0</version>
