--- a/ExpenseTracker/src/test/resources/application-test.properties
+++ b/ExpenseTracker/src/test/resources/application-test.properties
@@ -8,7 +8,7 @@ spring.datasource.username=postgres
 spring.datasource.password=admin
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
 
