--- a/ExpenseTracker/src/main/resources/application.properties
+++ b/ExpenseTracker/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.sql.init.mode=always
+spring.sql.init.mode=never
 spring.jpa.defer-datasource-initialization=false
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/ExpenseTrackerDatabase
@@ -8,7 +8,7 @@ spring.datasource.username=postgres
 spring.datasource.password=admin
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
 
@@ -17,4 +17,3 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
 spring.liquibase.change-log=classpath:db/changelog/changelog-master.xml
-spring.liquibase.enabled=true
