--- a/ExpenseTracker/src/test/resources/application-test.properties
+++ b/ExpenseTracker/src/test/resources/application-test.properties
@@ -1,15 +1,17 @@
-spring.datasource.driverClassName=org.postgresql.Driver
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/TestDatabase
-
-spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.path=/h2-console
+spring.h2.console.settings.trace=false
+spring.h2.console.settings.web-allow-others=false
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
 
 spring.jpa.properties.hibernate.format_sql=true
+spring.liquibase.enabled=false
