feat: IncomeController tested

--- a/ExpenseTracker/src/test/resources/application-test.properties
+++ b/ExpenseTracker/src/test/resources/application-test.properties
@@ -11,7 +11,7 @@ spring.h2.console.settings.trace=false
 spring.h2.console.settings.web-allow-others=false
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.jpa.properties.hibernate.format_sql=true
 spring.liquibase.enabled=false
