--- a/ExpenseTracker/src/main/resources/application.properties
+++ b/ExpenseTracker/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.username=postgres
 spring.datasource.password=admin
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
 
