feat: docker started

--- a/ExpenseTracker/src/main/resources/application.properties
+++ b/ExpenseTracker/src/main/resources/application.properties
@@ -2,13 +2,13 @@ spring.datasource.driverClassName=org.postgresql.Driver
 spring.sql.init.mode=never
 spring.jpa.defer-datasource-initialization=false
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/ExpenseTrackerDatabase
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/ExpenseTrackerDatabase}
 
-spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:admin}
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO:none}
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
 
