fix: added port to app container

--- a/ExpenseTracker/src/main/docker/docker-compose.yml
+++ b/ExpenseTracker/src/main/docker/docker-compose.yml
@@ -6,6 +6,9 @@ services:
     build:
       context: .
     container_name: app
+
+    ports:
+      - "127.0.0.1:8080:8080/tcp"
     depends_on:
       - db
     environment:
