--- a/ExpenseTracker/src/main/resources/application.properties
+++ b/ExpenseTracker/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.driverClassName=org.postgresql.Driver
 spring.sql.init.mode=never
 spring.jpa.defer-datasource-initialization=false
 
-spring.datasource.url=:jdbc:postgresql://localhost:5432/ExpenseTrackerDatabase
+spring.datasource.url=jdbc:postgresql://localhost:5432/ExpenseTrackerDatabase
 
 spring.datasource.username=postgres
 spring.datasource.password=admin
