--- a/ExpenseTracker/src/main/resources/application.properties
+++ b/ExpenseTracker/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/ExpenseTrackerDatabase
 spring.datasource.username=postgres
 spring.datasource.password=admin
 
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
