--- a/ExpenseTracker/src/main/resources/application.properties
+++ b/ExpenseTracker/src/main/resources/application.properties
@@ -17,3 +17,13 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
 spring.liquibase.change-log=classpath:db/changelog/changelog-master.xml
+
+# Asynchronous thread configuration
+# Configure the number of core threads
+async.executor.thread.core_pool_size = 5
+# Configure maximum threads
+async.executor.thread.max_pool_size = 5
+# Configure queue size
+async.executor.thread.queue_capacity = 99999
+# Configure the name prefix of threads in the thread pool
+async.executor.thread.name.prefix = async-service-
