feat: rabbit mq started

--- a/ExpenseTracker/src/main/resources/application.properties
+++ b/ExpenseTracker/src/main/resources/application.properties
@@ -27,3 +27,10 @@ async.executor.thread.max_pool_size = 5
 async.executor.thread.queue_capacity = 99999
 # Configure the name prefix of threads in the thread pool
 async.executor.thread.name.prefix = async-service-
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+queue.name=test
