--- a/ExpenseTracker/pom.xml
+++ b/ExpenseTracker/pom.xml
@@ -128,6 +128,11 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<plugins>
