--- a/ExpenseTracker/src/main/resources/application.properties
+++ b/ExpenseTracker/src/main/resources/application.properties
@@ -32,3 +32,5 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+
+queue.name=errors
